<resources>
    <string name="app_name">Calculador de Precios</string>
    <string name="nombre_cliente">Nombre del Cliente</string>
    <string name="productos">Productos</string>
    <string name="pizza_individual">Pizza Individual</string>
    <string name="pizza_familiar">Pizza Familiar</string>
    <string name="boneless_individuales">Boneless Individuales</string>
    <string name="boneless_p_compartir">Boneless p/ Compartir</string>
    <string name="hamburguesa_sencilla">Hamburguesa Sencilla</string>
    <string name="hamburguesa_doble">Hamburguesa Doble</string>
    <string name="a_que_municipio_ser_el_env_o">¿A que municipio será el envío?</string>
    <string name="calcular_precio">Calcular precio de la órden</string>
    <string name="precio_final">Precio Final: %s</string>
</resources>